# deepSI

./: .gitignore  .readthedocs.yml  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt  setup.py
deepSI/: __init__.py  fitting.py  models.py  networks.py  normalization.py
deepSI/controllers/: Controller.py  __init__.py  controller.py
deepSI/datasets/: SISTA_Database.py  __init__.py  dataset_utils.py  misc_data_sets.py  nonlinearbenchmark.py  sista_database.py  time_series.py
deepSI/exp_design/: __init__.py  common_input_signals.py  first.py
deepSI/experiment_design/: first.py
deepSI/fit_systems/: Fit_system.py  IO_auto_encoder_systems.py  IO_systems.py  SS_linear_systems.py  SS_systems.py  __init__.py  encoder_systems.py  encoders.py  fit_system.py  hyperparameter_optimization.py  io_autoencoder.py  linear_fit_systems.py  sklearn_io.py  ss_linear.py  ss_linear_systems.py  torch_io.py
deepSI/system_data/: System_data.py  __init__.py  system_data.py
docs/: conf.py  datasets.rst  deepSI.rst  environment.yml  examples.rst  fit_systems.rst  index.rst  install-guide.md  installation.rst  intro.rst  system_data.rst  systems.rst  tutorial.rst
examples/: 1. Overview deepSI.ipynb  2. pHNN SUBNET demo.ipynb  Encoder-grey-box-approach-alpha.ipynb  Examples 1; The flow of deepSI.ipynb  Examples 2; Datasets and custom models.ipynb  Examples 3; Extra bits.ipynb  LPV-SUBNET-example.ipynb  linear-SI.py  linear-benchmark-example.py  making-your-own-pytorch-estimator.py  simple-example.py
testing/: encoder-as-rnn.ipynb  uxyeye-comparison.py
(+48 files in other folders)
